be consistent with paths usage